# Colors

./: .gitignore  Colors.py  LICENSE  pyproject.toml
colors/: __init__.py  cli.py
colors/core/: __init__.py  color.py  constants.py
colors/formatters/: __init__.py  block.py  gradient.py  simple.py
colors/utils/: __init__.py  color_utils.py  text_utils.py
docs/: README.md
docs/ru/: README_ru.md
